Enabled Google Analytics

--- a/django_speedcenter/templates/site_base.html
+++ b/django_speedcenter/templates/site_base.html
@@ -9,8 +9,22 @@
 {% block logo %}<img src="/ds-media/img/pony-powered.png" width="210" height="65" alt="Pony Powered">{% endblock logo %}
 
 {% block footer %}
-  <div class="footer">
-    <p>An experimental service for the Django community: other projects will be supported soon. Contact <a href="mailto:chris@improbable.org">chris@improbable.org</a> / <a href="http://twitter.com/acdha">@acdha</a> with questions</p>
-    <p>Powered by <a href="https://github.com/tobami/codespeed/">Codespeed</a>, <a href="http://www.djangoproject.com/">Django</a> and <a href="http://www.python.org">Python</a></p>
-  </div>
+    <div class="footer">
+        <p>An experimental service for the Django community: other projects will be supported soon. Contact <a href="mailto:chris@improbable.org">chris@improbable.org</a> / <a href="http://twitter.com/acdha">@acdha</a> with questions</p>
+        <p>Powered by <a href="https://github.com/tobami/codespeed/">Codespeed</a>, <a href="http://www.djangoproject.com/">Django</a> and <a href="http://www.python.org">Python</a></p>
+    </div>
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-21934297-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 {% endblock footer %}
