Added basic djangozoom credit

--- a/django_speedcenter/templates/site_base.html
+++ b/django_speedcenter/templates/site_base.html
@@ -10,7 +10,8 @@
 
 {% block footer %}
     <div class="footer">
-        <p>An experimental service for the Django community: other projects will be supported soon. Contact <a href="mailto:chris@improbable.org">chris@improbable.org</a> / <a href="http://twitter.com/acdha">@acdha</a> with questions</p>
+        <p>An experimental service for the Django community. Contact <a href="mailto:chris@improbable.org">chris@improbable.org</a> / <a href="http://twitter.com/acdha">@acdha</a> with questions</p>
+        <p style="font-size: larger">Hosting generously provided by<br/><a style="text-decoration: none; font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;" href="http://djangozoom.com">django<span style="color: #7CD23E;">zoom</span></a></p>
         <p>Powered by <a href="https://github.com/tobami/codespeed/">Codespeed</a>, <a href="http://www.djangoproject.com/">Django</a> and <a href="http://www.python.org">Python</a></p>
     </div>
     <script type="text/javascript">
