Enabled page-load performance tracking in Google Analytics

--- a/django_speedcenter/templates/site_base.html
+++ b/django_speedcenter/templates/site_base.html
@@ -18,6 +18,7 @@
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-21934297-1']);
         _gaq.push(['_trackPageview']);
+        _gaq.push(['_trackPageLoadTime']);
 
         (function() {
             var ga = document.createElement('script');
