Avoid displaying a confusing PyPy logo

--- a/django_speedcenter/templates/site_base.html
+++ b/django_speedcenter/templates/site_base.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/ds-media/css/custom.css" type="text/css" charset="utf-8">
 {% endblock extra_head %}
 
+{% block logo %}Unofficial Django{% endblock logo %}
+
 {% block footer %}
     <div class="footer">
         <p>An experimental service for the Django community. Contact <a href="mailto:chris@improbable.org">chris@improbable.org</a> / <a href="http://twitter.com/acdha">@acdha</a> with questions</p>
