Tweaked page title since we don't have a logo

--- a/django_speedcenter/templates/site_base.html
+++ b/django_speedcenter/templates/site_base.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="/ds-media/css/custom.css" type="text/css" charset="utf-8">
 {% endblock extra_head %}
 
-{% block logo %}Unofficial Django{% endblock logo %}
+{% block logo %}{% endblock logo %}
+{% block page_title %}Unofficial Django Speedcenter{% endblock page_title %}
+
 
 {% block footer %}
     <div class="footer">
